[tool.poetry]
name = "neuro-all"
version = "22.6.0"
description = "Combo package for installing all neu.ro command line tools by 'pipx install neuro-all' command"
authors = ["Neu.ro Team <team@neu.ro>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://neu.ro"
repository = "https://github.com/neuro-inc/neuro-all"
keywords = [
  "neu.ro",
  "mlops",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "License :: OSI Approved :: Apache Software License",
]
packages = [
    { include = "neuro_all" },
]

[tool.poetry.plugins."neuro_api"]
neuro-all = "neuro_all:setup"

[tool.poetry.scripts]
neuro = "neuro_cli.main:main"
docker-credential-neuro = "neuro_cli.docker_credential_helper:main"
neuro-extras = "neuro_extras:main"
neuro-flow = "neuro_flow.cli:main"

[tool.poetry.dependencies]
python = "^3.7.0"
neuro-cli = "22.6.0"
neuro-extras = "22.2.2"
neuro-flow = "22.6.0"
certifi = "2022.5.18.1"

[tool.poetry.dev-dependencies]
pytest = "7.1.2"
pre-commit = "^2.19.0"
click = "^8.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
