[tool.poetry]
name = "apolo-all"
version = "24.10.0"
description = "Combo package for installing all Apolo command line tools by 'pipx install apolo-all' command"
authors = ["Apolo Team <dev@apolo.us>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://apolo.us"
repository = "https://github.com/neuro-inc/neuro-all"
keywords = [
  "neu.ro",
  "mlops",
  "apolo",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "License :: OSI Approved :: Apache Software License",
]
packages = [
    { include = "apolo_all" },
]

[tool.poetry.plugins."apolo_all"]
apolo-all = "apolo_all:setup"

[tool.poetry.scripts]
apolo = "apolo_cli.main:main"
neuro = "apolo_cli.main:main"
docker-credential-neuro = "apolo_cli.docker_credential_helper:main"
docker-credential-apolo = "apolo_cli.docker_credential_helper:main"
apolo-extras = "apolo_extras:main"
neuro-extras = "apolo_extras:main"
apolo-flow = "apolo_flow.cli:main"
neuro-flow = "apolo_flow.cli:main"

[tool.poetry.dependencies]
python = "^3.9.0"
apolo-cli = "24.10.0"
apolo-extras = "24.9.0"
apolo-flow = "24.10.1"
certifi = "2024.2.2"

[tool.poetry.dev-dependencies]
pytest = "8.1.1"
pre-commit = "^3.5.0"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
towncrier = "^24.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
